CSS fix, OSO right alignment

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -53,6 +53,12 @@ h3 {
   margin-bottom: 16pt;
 }
 
+#oso-section {
+  text-align: right;
+  justify-content: right;
+  align-items: right;
+}
+
 .app-icon {
   border-radius: 24%;
   box-shadow: 0 2px 40px rgba(0, 0, 0, 0.2);
